--- a/modulos/templates/partials/footer.html
+++ b/modulos/templates/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <script>document.write(new Date().getFullYear())</script> © Jidox - Coderthemes.com
+                <script>document.write(new Date().getFullYear())</script> © Maxxx Moveis - maxxxmoveis.com.br
             </div>
             <div class="col-md-6">
                 <div class="text-md-end footer-links d-none d-md-block">
