--- a/modulos/templates/dashboard/dashboard-campaign.html
+++ b/modulos/templates/dashboard/dashboard-campaign.html
@@ -303,7 +303,7 @@
                                 </td>
                                 <td>{{ campaign.total_numbers }}</td>
                                 <td>{{ campaign.send_success }}</td>
-                                <td>{{ campaign.send_erro }}</td>
+                                <td>{{ campaign.send_error }}</td>
                                 <td>{{ campaign.response_rate }}%</td>
                                 <td>{{ campaign.start_date_formatted }}</td>
                                 <td>{{ campaign.end_date_formatted }}</td>
