--- a/modulos/templates/details/details-campaign.html
+++ b/modulos/templates/details/details-campaign.html
@@ -178,7 +178,7 @@
                                     {{ log.fields.msg }}
                                 </td>
                                 <td class="fs-8" style="white-space: nowrap;">
-                                    {{ log.fields.start_date_formatted }}
+                                    {{ log.fields.created_at_formatted}}
                                 </td>
                             </tr>
                             {% endfor %}
