--- a/modulos/templates/dashboard/dashboard-campaign.html
+++ b/modulos/templates/dashboard/dashboard-campaign.html
@@ -245,7 +245,7 @@
                             <span id="progress-state-{{ campaign.id_progress }}" class="badge bg-warning text-white "></span>
                         </h5>
                         <div class="progress-w-percent">
-                            <span class="progress-value fw-bold"
+                            <span style="text-wrap: nowrap;" class="progress-value fw-bold"
                                 id="progress-value-{{ campaign.id_progress }}">0%</span>
                             <div class="progress progress-sm">
                                 <div class="progress-bar" id="progress-bar-{{ campaign.id_progress }}"
