--- a/modulos/templates/details/details-campaign.html
+++ b/modulos/templates/details/details-campaign.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'vendor/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.css' %}" />
 
 {% endblock extra_css %} {% block content %}
-<div class="row"></div>
+<div class="row">
     <div class="col-12 mt-2">
         <div class="page-title-box justify-content-end d-flex align-items-center flex-lg-row flex-column">
             <div class="p-2">
