--- a/modulos/templates/details/details-campaign.html
+++ b/modulos/templates/details/details-campaign.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 </div>
-<div class="row row-cols-1 row-cols-xxl-4 row-cols-lg-3 row-cols-md-2 mt-2">
+<div class="row row-cols-1 row-cols-xxl-5 row-cols-lg-4 row-cols-md-2 mt-2">
     <div class="col">
         <div class="card widget-icon-box">
             <div class="card-body">
@@ -58,7 +58,7 @@
             </div> <!-- end card-body-->
         </div> <!-- end card-->
     </div> <!-- end col-->
-
+    
     <div class="col">
         <div class="card widget-icon-box">
             <div class="card-body">
@@ -89,6 +89,24 @@
                     <div class="avatar-sm flex-shrink-0">
                         <span class="avatar-title text-bg-danger rounded rounded-3 fs-3 widget-icon-box-avatar shadow">
                             <i style="padding-top: 2px;" class="ri-error-warning-line"></i> <!-- Ícone de erro -->
+                        </span>
+                    </div>
+                </div>
+            </div> <!-- end card-body-->
+        </div> <!-- end card-->
+    </div> <!-- end col-->
+    <div class="col">
+        <div class="card widget-icon-box">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <div class="flex-grow-1 overflow-hidden">
+                        <h5 class="text-muted text-uppercase fs-13 mt-0" title="Number of Orders">Total de respostas
+                        </h5>
+                        <h3 class="fs-1 m-0">{{ response_count }}</h3>
+                    </div>
+                    <div class="avatar-sm flex-shrink-0">
+                        <span style="background-color: purple !important;" class="avatar-title text-bg-info rounded rounded-3 fs-3 widget-icon-box-avatar shadow">
+                            <i class="ri-message-3-line"></i>
                         </span>
                     </div>
                 </div>
